Fixed link to catering button on home page. Fixed h1 on catering page in hopes it fits in screen on mobile device.

--- a/catering/styles.css
+++ b/catering/styles.css
@@ -90,8 +90,8 @@ header img {
 .main h1 {
     font-size:5em;
     background-color:rgba(0, 0, 0, 0.6);
-    border:2px solid #f2f2f2;
-    padding:20px;
+    margin:0 20px;
+    padding:10px 5px;
 
 }
 .packageboxes {
